--- a/app/src/componants/App.css
+++ b/app/src/componants/App.css
@@ -55,15 +55,19 @@ header {
   background-size: cover;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   margin: 20px 0px;
   padding: 40px 0px;
 }
 /* City component styling  */
+.City-componant {
+  width: 18%;
+}
 .Card {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  margin: 20px;
   width: 90%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   padding: 16px;
@@ -74,11 +78,14 @@ header {
   width: 200px;
   height: 300px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .city-img {
-  max-width: 50px;
-  max-height: 10px;
+  position: relative;
+  max-width: 100%;
 }
 
 .Cities-city {
@@ -86,6 +93,55 @@ header {
   width: 10%;
 }
 
-.card-title{
-  color: black;
+.card-title {
+ 
+}
+.text-card{
+  width:200px;
+    margin: 20px;
+    border: 5px solid white;
+  border-radius: 10px;
+  color:white;
+  background-color: #79A0AF;
+  }
+
+@media screen and (max-width: 1280px) {
+  .Cities {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .Cities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+
+  .Card {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    justify-content: space-between;
+  }
+
+}
+@media screen and (max-width: 600px) {
+  .Cities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+
+  .Card {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin: 10px 0px;
+  }
+
 }
