--- a/app/src/componants/App.css
+++ b/app/src/componants/App.css
@@ -6,10 +6,7 @@
   display: flex;
   justify-content: space-between;
 }
-/* .container-logo{
- width: auto;
-  height: 20px; 
-} */
+
 .logo {
   height: 20px;
   padding: 14px 16px;
@@ -93,9 +90,7 @@ header {
   width: 10%;
 }
 
-.card-title {
- 
-}
+
 .text-card{
   width:200px;
     margin: 20px;
@@ -105,13 +100,15 @@ header {
   background-color: #79A0AF;
   }
 
+  /* media quiry for larg screen less than 1280px width*/
+
 @media screen and (max-width: 1280px) {
   .Cities {
     display: flex;
     flex-wrap: wrap;
   }
 }
-
+/* media quiry for larg screen less than 800px width*/
 @media screen and (max-width: 800px) {
   .Cities {
     display: flex;
@@ -128,6 +125,7 @@ header {
   }
 
 }
+/* media quiry for larg screen less than 600px width*/
 @media screen and (max-width: 600px) {
   .Cities {
     display: flex;
